traefik/traefik-ds.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  namespace: default
  name: dev-traefik
  labels:
    app: dev-traefik
spec:
  selector:
    matchLabels:
      app: dev-traefik
  template:
    metadata:
      namespace: default
      labels:
        app: dev-traefik
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - dev-k8s-control-plane
      serviceAccountName: traefik-ingress-controller
      containers:
      - name: dev-traefik
        image: traefik:2.10
        imagePullPolicy: Always
        ports:
        - name: web
          containerPort: 80
          hostPort: 80
        - name: websecure
          containerPort: 443
          hostPort: 443
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 1
            memory: 300Mi
        volumeMounts:
          - mountPath: "/ssl"
            name: "ssl"
          - mountPath: "/etc/traefik"
            name: "config"
      volumes:
      - name: ssl
        secret:
          secretName: traefik-secret
          items:
          - key: CERT
            path: tls.crt
          - key: KEY
            path: tls.key
      - name: config
        configMap:
          name: traefik-internal-config
