traefik/traefik-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-svc
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: websecure
      port: 443
  selector:
    app: dev-traefik
