traefik/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-websecure-ir
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.local`)
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    certResolver: default
